add photo, add team modal on all pages

--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -1,6 +1,9 @@
 <div class="backdrop-modal team__backdrop--hidden">
   <div class="team__modal">
-    <button class="team__modal--close close-modal-team button__close" type="button">
+    <button
+      class="team__modal--close close-modal-team button__close"
+      type="button"
+    >
       <svg>
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
@@ -13,9 +16,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-
             src="./images/team-vira.jpg"
-
             alt="Teammate photo"
           />
         </div>
@@ -32,9 +33,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-
             src="./images/team-ilona.jpg"
-
             alt="Teammate photo"
           />
         </div>
@@ -51,9 +50,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-
             src="./images/team-artem.jpg"
-
             alt="Teammate photo"
           />
         </div>
@@ -70,9 +67,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-
             src="images/team-olena.jpg"
-
             alt="Teammate photo"
           />
         </div>
@@ -89,9 +84,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-
             src="./images/team-ihor.jpg"
-
             alt="Teammate photo"
           />
         </div>
@@ -108,9 +101,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-
             src="./images/team-serhii.jpg"
-
             alt="Teammate photo"
           />
         </div>
@@ -127,9 +118,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-
             src="./images/team-oleksandr.jpg"
-
             alt="Teammate photo"
           />
         </div>
@@ -146,9 +135,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-
             src="./images/team-vita.jpg"
-
             alt="Teammate photo"
           />
         </div>
@@ -165,9 +152,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-
             src="./images/team-tetiana.jpg"
-
             alt="Teammate photo"
           />
         </div>
@@ -184,7 +169,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="images/unknown.jpg"
+            src="images/team-misha.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -201,7 +186,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="images/unknown.jpg"
+            src="images/team-volodymyr.jpg"
             alt="Teammate photo"
           />
         </div>
