--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,7 @@
         <span class="menu-open__text">MENU</span>
       </button>
       <label class="switch">
-        <input type="checkbox" />
+        <input type="checkbox" id="switch__id"/>
         <span class="switch__marker"> </span>
         <svg class="switch__icon-moon">
           <use href="./images/symbol-defs.svg#icon-moon"></use>
