--- a/src/partials/hero-home.html
+++ b/src/partials/hero-home.html
@@ -8,7 +8,7 @@
     </picture> -->
 
     
-        <div class="container hero-container">
+        <div class="container">
             <div class="hero__wrapper">
                 <h1 class="hero__title">Let’s Make Your Own Cinema</h1>
                 <p class="hero__text paragraphs">
