--- a/src/partials/modal-empty.html
+++ b/src/partials/modal-empty.html
@@ -7,32 +7,19 @@
     </p>
     <div class="modal-empty__thumb">
       <picture>
-        <source
-          srcset="
+        <source srcset="
             /src/images/modal-empty-des_x1.png 1x,
             /src/images/modal-empty-des_x2.png 2x
-          "
-          media="(min-width:1280px)"
-        />
-        <source
-          srcset="
+          " media="(min-width:1280px)" />
+        <source srcset="
             /src/images/modal-empty-tab_x1.png 1x,
             /src/images/modal-empty-tab_x2.png 2x
-          "
-          media="(min-width:769px)"
-        />
-        <source
-          srcset="
+          " media="(min-width:769px)" />
+        <source srcset="
             /src/images/modal-empty-mob_x1.png 1x,
             /src/images/modal-empty-mob_x2.png 2x
-          "
-          media="(max-width:768px)"
-        />
-        <img
-          class="products-list__photo"
-          src="/src/images/modal-empty-des_x1.png"
-          alt="banner with film attributes"
-        />
+          " media="(max-width:768px)" />
+        <img class="products-list__photo" src="/src/images/modal-empty-des_x1.png" alt="banner with film attributes" />
       </picture>
     </div>
     <button class="modal-empty__close" type="button">
