--- a/src/partials/seach-catalog.html
+++ b/src/partials/seach-catalog.html
@@ -1,27 +1,18 @@
 <section class="search">
   <div class="search-wrapper">
-        <form class="search-form" id="search-form">
-        <input
-          class="search-input-field"
-          type="text"
-          name="search"
-          id="search-input"
-          placeholder="Search"
-          autocomplete="off"
-        />
-        <button class="search-button" type="submit" aria-label="search button">
-          <svg class="icon-search" width="20" height="20">
-            <use
-              xlink:href="./images/symbol-defs.svg#icon-search"
-              alt="Search icon"
-            ></use>
-          </svg>
-        </button>
+    <form class="search-form" id="search-form">
+      <input class="search-input-field" type="text" name="search" id="search-input" placeholder="Search"
+        autocomplete="off" />
+      <button class="search-button" type="submit" aria-label="search button">
+        <svg class="icon-search" width="20" height="20">
+          <use xlink:href="./images/symbol-defs.svg#icon-search" alt="Search icon"></use>
+        </svg>
+      </button>
     </form>
 
   </div>
 
-  
+
 </section>
 
 <section class="card-catalog">
@@ -30,5 +21,3 @@
     </ul>
   </div>
 </section>
-
-
