--- a/src/partials/widelySeach.html
+++ b/src/partials/widelySeach.html
@@ -1,4 +1,4 @@
-<div class="alarm">
+<div class="widelySearch">
   <form class="filmFormWide" autocomplete="off">
     <div class="filmFormWide__film-div">
       <input
