--- a/src/sass/components/_widelySearch.scss
+++ b/src/sass/components/_widelySearch.scss
@@ -1,64 +1,49 @@
-.alarm {
+.widelySearch {
+  outline: 1px solid tomato;
   display: flex;
   justify-content: center;
   width: 100%;
-  background-color: rgba(17, 17, 17, 1);
+  background-color: $color-primary-dark;
 }
 
 .filmFormWide {
+  outline: 1px solid tomato;
   display: flex;
   flex-wrap: wrap;
-
+  background-color: $color-primary-dark;
   width: 280px;
   margin: 0;
 
-  background-color: rgba(17, 17, 17, 1);
-  outline: 1px solid tomato;
-}
+  @include tablet {
+    width: 704px;
+  }
+  @include desktop {
+    width: 1083px;
+  }
 
-.filmFormWide__film-div {
-  position: relative;
-  width: 190px;
-  height: 40px;
-  margin: 0 0 12px 0;
-  overflow: hidden;
-  background-color: transparent;
+  & div {
+    position: relative;
+    background-color: transparent;
+    border-radius: 8px;
+    border: 1px solid $color-primary-light;
+    outline: none;
+  }
 
-  border-radius: 8px;
-  border: 1px solid white;
-  outline: none;
-}
+  & input {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 10px 20px;
 
-.filmFormWide__film-input {
-  display: block;
-  width: 100%;
-  height: 100%;
+    @include font-text($fw: 500, $fs: 14, $lh: 1.42, $ls: 0.02);
+    color: $color-neutral-light;
+    background-color: transparent;
+    outline: none;
 
-  @include font-text($fw: 500, $fs: 14, $lh: 1.42, $ls: 0.02);
-  color: $color-neutral-light;
-  background-color: transparent;
-  outline: none;
-}
-
-/* .filmFormWide__film-input:hover label,
-.filmFormWide__film-input:focus label,
-.filmFormWide__film-input:not(:placeholder-shown) label {
-  transform: translateY(-100%);
-} */
-
-/* ======== */
-
-.filmFormWide__year-div {
-  position: relative;
-  width: 95px;
-  height: 40px;
-  margin: 0;
-
-  background-color: transparent;
-
-  border-radius: 8px;
-  border: 1px solid white;
-  outline: none;
+    @include desktop {
+      @include font-text($fw: 500, $fs: 16, $lh: 1.19, $ls: 0.02);
+    }
+  }
 
   & ul {
     position: absolute;
@@ -66,7 +51,10 @@
     left: 0;
     width: 100%;
     z-index: 1000;
-    border: 1px solid #b7b7b7;
+    border: 1px solid $color-neutral-light;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    background-color: $color-primary-dark;
 
     display: none;
     &.isVisible {
@@ -74,154 +62,96 @@
     }
   }
   & li {
-    padding: 0 4px;
+    padding: 10px 20px;
     display: flex;
     align-items: center;
 
     height: 40px;
     @include font-text($fw: 500, $fs: 14, $lh: 1.42, $ls: 0.02);
     color: $color-neutral-light;
-    background-color: rgba(17, 17, 17, 1);
-    border-top: 1px solid #b7b7b7;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-top: 1px solid $color-neutral-light;
+
+    @include desktop {
+      @include font-text($fw: 500, $fs: 16, $lh: 1.19, $ls: 0.02);
+    }
   }
 }
 
-.filmFormWide__year-input {
-  display: block;
-  width: 100%;
-  height: 100%;
+.filmFormWide__film-div {
+  width: 190px;
+  height: 40px;
+  margin: 0 0 12px 0;
 
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  color: #b7b7b7;
-  background-color: transparent;
-  outline: none;
+  @include tablet {
+    width: 188px;
+    height: 44px;
+    margin: 0 12px 0 0;
+  }
+  @include desktop {
+    width: 315px;
+    height: 48px;
+    margin: 0 20px 0 0;
+  }
 }
 
-/* ====== */
+.filmFormWide__year-div {
+  width: 95px;
+  height: 40px;
+  margin: 0;
+
+  @include tablet {
+    width: 95px;
+    height: 44px;
+    margin: 0 12px 0 0;
+  }
+  @include desktop {
+    width: 95px;
+    height: 48px;
+    margin: 0 20px 0 0;
+  }
+}
 
 .filmFormWide__genre-div {
-  position: relative;
   width: 173px;
   height: 40px;
   margin: 0;
   margin-left: auto;
   margin-bottom: 12px;
 
-  background-color: transparent;
-
-  border-radius: 8px;
-  border: 1px solid white;
-  outline: none;
-
-  & ul {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    border: 1px solid #b7b7b7;
-
-    display: none;
-    &.isVisible {
-      display: block !important;
-    }
+  @include tablet {
+    width: 144px;
+    height: 44px;
+    margin-left: 0;
+    margin-bottom: 0;
+    margin-right: 12px;
   }
-  & li {
-    padding: 0 4px;
-    display: flex;
-    align-items: center;
-
-    height: 40px;
-    @include font-text($fw: 500, $fs: 14, $lh: 1.42, $ls: 0.02);
-    color: $color-neutral-light;
-    background-color: rgba(17, 17, 17, 1);
-    border-top: 1px solid #b7b7b7;
+  @include desktop {
+    width: 260px;
+    height: 48px;
+    margin-left: 0;
+    margin-bottom: 0;
+    margin-right: 20px;
   }
 }
-
-.filmFormWide__genre-input {
-  display: block;
-  width: 100%;
-  height: 100%;
-
-  @include font-text($fw: 500, $fs: 14, $lh: 1.42, $ls: 0.02);
-  color: $color-neutral-light;
-  background-color: transparent;
-  outline: none;
-}
-
-/* ========= */
 
 .filmFormWide__country-div {
-  position: relative;
   width: 220px;
   height: 40px;
   margin: 0;
   margin-left: 0;
   margin-bottom: 0px;
 
-  background-color: transparent;
-  border-radius: 8px;
-  border: 1px solid white;
-  outline: none;
-
-  & ul {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    border: 1px solid #b7b7b7;
-
-    display: none;
-    &.isVisible {
-      display: block !important;
-    }
+  @include tablet {
+    width: 181px;
+    height: 44px;
   }
-  & li {
-    padding: 0 4px;
-    display: flex;
-    align-items: center;
-
-    height: 40px;
-    @include font-text($fw: 500, $fs: 14, $lh: 1.42, $ls: 0.02);
-    color: $color-neutral-light;
-    background-color: rgba(17, 17, 17, 1);
-    border-top: 1px solid #b7b7b7;
+  @include desktop {
+    width: 281px;
+    height: 44px;
   }
 }
-
-.filmFormWide__country-input {
-  position: relative;
-
-  display: block;
-  width: 100%;
-  height: 100%;
-
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-  color: #b7b7b7;
-  background-color: transparent;
-  outline: none;
-
-  & .dropUl {
-    position: absolute;
-    z-index: 10000;
-    top: 40px;
-
-    width: 100%;
-  }
-  & .dropLi {
-    width: 100%;
-  }
-}
-
-/* ============ */
 
 .filmFormWide__btn {
   width: 40px;
@@ -231,13 +161,23 @@
   border-radius: 50%;
   border: none;
   background: linear-gradient(141.22deg, #ffc226 9.4%, #f84119 91.91%);
+  //   transition: background 400ms;
+
+  &:active {
+    background: linear-gradient(141.22deg, #f84119 9.4%, #ffc226 91.91%);
+  }
 
   & svg {
     width: 18px;
     height: 18px;
   }
-  &:hover svg,
-  &:focus svg {
-    fill: $color-primary-dark;
+
+  @include tablet {
+    width: 44px;
+    height: 44px;
+  }
+  @include tablet {
+    width: 48px;
+    height: 48px;
   }
 }
