--- a/src/sass/layouts/_hero-home.scss
+++ b/src/sass/layouts/_hero-home.scss
@@ -21,7 +21,7 @@
     max-width: 768px;
 
     background-position: 0px 0px, 170px 0px;
-    background-size: contain, contain;
+    // background-size: contain, contain;
   }
 
   @include desktop {
@@ -34,36 +34,33 @@
   }
 }
 
+.hero__additional-container {
+  padding-right: 32px;
+  padding-left: 32px;
+}
+
 .hero__wrapper {
   //   position: absolute;
   display: flex;
-  //   justify-content: space-around;
+  justify-content: center;
   //   padding-top: 40px;
   align-items: flex-start;
   flex-direction: column;
   color: $color-text;
   // width: 464px;
   z-index: 1;
-  width: 250px;
+  width: 300px;
   height: 100%;
-  padding-top: 40px;
-  margin-left: 20px;
+
+  // padding-top: 40px;
+  // margin-left: 20px;
 
   @include tablet {
-    padding-top: 36px;
-    width: 350px;
-    margin-left: 32px;
-
-    // justify-content: center;
+    width: 340px;
   }
 
   @include desktop {
     width: 464px;
-    margin-left: 130px;
-
-    // height: 322px;
-    padding-top: 118px;
-    // padding-bottom: auto;
   }
 }
 
@@ -123,43 +120,6 @@
   }
 }
 
-// .subtract {
-//   position: absolute;
-//   background-repeat: no-repeat;
-//   height: 380px;
-
-//   width: 100vw;
-//   z-index: 998;
-//   top: 0;
-//   left: 0;
-
-//   background-image: url('../images/hero-black-tel.png');
-//   // ?  ==========================HERE=======================================
-//   //   background-image: linear-gradient(
-//   //       87.8deg,
-//   //       #0e0e0e 15.61%,
-//   //       rgba(14, 14, 14, 0) 60.39%
-//   //     ),
-//   //     url('../images/hero-black-tel.png');
-//   //   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-//   // ?  =================================================================
-
-//   // @include retina{
-//   //     background-image: url('../images/hero-black-tel2x.png') ;
-//   // }
-
-//   @include tablet {
-//     background-image: url('../images/hero-black-tab.png');
-//     height: 432px;
-//   }
-
-//   @include desktop {
-//     height: 720px;
-
-//     background-image: url('../images/hero-black-desk.png');
-//   }
-// }
-
 //!=============================HOME===================================
 
 .hero__bg--img {
@@ -212,32 +172,14 @@
   }
 }
 
-// .hero__home--wrapper {
-//   //   padding-top: 40px;
-//   //   padding-bottom: 89px;
-//   z-index: 999;
-//   width: 199px;
-//   height: auto;
-
-//   @include tablet {
-//     width: 357px;
-//     // height: 248px;
-
-//     // padding-top: 62px;
-//     // padding-bottom: 62px;
-//   }
-
-//   @include desktop {
-//     width: 464px;
-//     // height: 322px;
-//     // padding-top: 169px;
-//     // padding-bottom: 169px;
-//   }
-// }
-
-// .hero__home--subtract {
-
-// }
+.hero__vote {
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
+  @media screen and (min-width: 1280px) {
+    margin-top: 16px;
+  }
+}
 
 .hero__title {
   font-size: 32px;
@@ -247,6 +189,7 @@
   flex: none;
   order: 0;
   flex-grow: 0;
+  max-height: 200px;
 
   @include tablet {
     font-size: 44px;
@@ -254,15 +197,34 @@
   }
 
   @include desktop {
+    max-height: 500px;
     font-size: 64px;
     line-height: 75px;
   }
 }
 
 .hero__text {
+  width: 166px;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+
   margin-top: 8px;
 
-  @include desktop {
+  color: var(--seconday-txt-color);
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 16px;
+    width: 100%;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 16px;
+    line-height: 19px;
+
     margin-top: 16px;
   }
 }
@@ -424,14 +386,22 @@
 }
 
 .hero__movie-descripton {
-  //   margin-top: 16px;
-
-  width: 100%;
+  margin-top: 16px;
+  max-height: 160px;
   overflow: hidden;
 
-  //   @include desktop {
-  //     margin-top: 28px;
-  //   }
+  @media screen and (max-width: 767px) {
+    max-height: 80px;
+    width: 200px;
+  }
+  @media screen and (min-width: 768px) {
+    max-height: 80px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    max-height: none;
+    margin-top: 28px;
+  }
 }
 
 // .hero__movie--wrapper {
@@ -477,13 +447,14 @@
 }
 
 .hero__movie-title {
+  width: 100%;
   font-size: 32px;
   line-height: 38px;
   display: flex;
   align-items: center;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+  // flex: none;
+  // order: 0;
+  // flex-grow: 0;
 
   color: $color-text;
 
